--- a/css/main.css
+++ b/css/main.css
@@ -135,10 +135,11 @@ section {
       border-radius: 16px;
       border: none;
       position: absolute;
-      bottom: 0; }
+      bottom: 0;
+      z-index: 1; }
       .welcome-info article button:hover {
         background-color: #CC1A21; }
-    .welcome-info article div {
+    .welcome-info article .qrcode {
       text-align: center;
       background-color: white;
       border: solid 3px #000;
@@ -146,15 +147,28 @@ section {
       position: fixed;
       bottom: -50%;
       padding: 5%;
-      width: 90%; }
-      .welcome-info article div img {
+      width: 90%;
+      z-index: 1; }
+      .welcome-info article .qrcode img {
         margin: auto;
         width: 100%; }
+    .welcome-info article .cover-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      border-radius: 0;
+      border: none;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5); }
     .welcome-info article .qr-up {
       bottom: 15%;
       transition: bottom 0.8s ease; }
     .welcome-info article .qr-down {
       bottom: -50%;
       transition: bottom 0.8s ease; }
+
+.hidden {
+  display: none; }
 
 /*# sourceMappingURL=main.css.map */
