--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ section {
   background-color: white;
   text-align: center; }
   .welcome-info article {
-    width: 90%;
+    width: 85%;
     height: 90%;
     margin: 5% auto;
     font-family: ccb-font;
@@ -160,10 +160,10 @@ section {
           background-color: #CC1A21;
           transform: scale(1.05);
           transition: transform 0.1s ease; }
-        .welcome-info article .bottom-menu button:first-of-type {
-          background-color: #fff;
-          border: #db1a21 solid 6px;
-          color: #db1a21; }
+      .welcome-info article .bottom-menu .active {
+        background-color: #fff;
+        border: #db1a21 solid 6px;
+        color: #db1a21; }
     .welcome-info article .qrcode {
       text-align: center;
       background-color: white;
@@ -190,8 +190,44 @@ section {
       bottom: 15%;
       transition: bottom 0.8s ease; }
     .welcome-info article .qr-down {
-      bottom: -50%;
+      bottom: -70%;
       transition: bottom 0.8s ease; }
+  .welcome-info .bottom-menu5 {
+    background-color: #db1a21;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 8%;
+    margin: auto;
+    line-height: 100%; }
+    .welcome-info .bottom-menu5 button {
+      background-color: transparent;
+      border: none;
+      border-radius: 10px;
+      width: 12%;
+      height: 70%;
+      color: white;
+      font-family: ccb-font;
+      font-size: 26px;
+      line-height: 100%;
+      transform: translateY(-16%); }
+      .welcome-info .bottom-menu5 button:nth-of-type(3) {
+        background-color: #376787;
+        border: #fff solid 5px;
+        border-radius: 50%;
+        transform: translateY(-35%);
+        width: 80px;
+        height: 80px;
+        margin: 0 2%;
+        font-size: 30px; }
+      .welcome-info .bottom-menu5 button:nth-of-type(-n + 2) {
+        margin: 0 2%; }
+      .welcome-info .bottom-menu5 button:nth-of-type(n + 4) {
+        margin: 0 2%; }
+    .welcome-info .bottom-menu5 .active {
+      background-color: #fff;
+      color: #db1a21;
+      transform: scale(1.05) translateY(-16%); }
 
 .hidden {
   display: none; }
