--- a/scss/_welcome.scss
+++ b/scss/_welcome.scss
@@ -15,7 +15,6 @@ section {
 
 .welcome-img {
 
-
     img {
         min-width:100%;
         height:100%;
@@ -29,7 +28,7 @@ section {
     text-align:center;
 
     article {
-        width:90%;
+        width:85%;
         height:90%;
         margin:5% auto;
         font-family: ccb-font;
@@ -88,11 +87,11 @@ section {
                     transform: scale(1.05);
                     transition:transform 0.1s ease;
                 }
-                &:first-of-type {
-                    background-color:#fff;
-                    border:$ccb-color solid 6px;
-                    color:$ccb-color;
-                }
+            }
+            .active {
+                background-color:#fff;
+                border:$ccb-color solid 6px;
+                color:$ccb-color;
             }
         }
         .qrcode {
@@ -126,8 +125,53 @@ section {
             transition:bottom 0.8s ease;
         }
         .qr-down {
-            bottom:-50%;
+            bottom:-70%;
             transition:bottom 0.8s ease;
+        }
+    }
+    .bottom-menu5 {
+        background-color: $ccb-color;
+        position:absolute;
+        bottom:0;
+        width:100%;
+        height:8%;
+        margin:auto;
+        line-height:100%;
+
+        button {
+            background-color:transparent;
+            border:none;
+            border-radius:10px;
+            width:12%;
+            height:70%;
+            color:white;
+            font-family: ccb-font;
+            font-size:26px;
+            line-height:100%;
+            transform:translateY(-16%);
+
+            &:nth-of-type(3) {
+                background-color:#376787;
+                border:#fff solid 5px;
+                border-radius:50%;
+                transform:translateY(-35%);
+                width:80px;
+                height:80px;
+                margin:0 2%;
+                font-size:30px;
+            }
+            &:nth-of-type(-n + 2) {
+                margin:0 2%;
+            }
+            &:nth-of-type(n + 4) {
+                margin:0 2%;
+            }
+        }
+        .active {
+            background-color:#fff;
+            color:$ccb-color;
+            transform:scale(1.05) translateY(-16%);
+
         }
     }
 }
