--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,99 @@ section {
     .welcome-info article .qr-down {
       bottom: -70%;
       transition: bottom 0.8s ease; }
-  .welcome-info .bottom-menu5 {
+
+.hidden {
+  display: none; }
+
+.logo-simple {
+  position: fixed;
+  left: 50%;
+  top: 20px;
+  transform: translateX(-50%);
+  z-index: 1;
+  width: 20%; }
+
+.main-events {
+  text-align: center;
+  min-width: 100%;
+  height: 35%;
+  color: white;
+  font-family: ccb-font; }
+  .main-events img {
+    height: 100%;
+    min-width: 100%;
+    margin: auto;
+    -webkit-box-shadow: inset 14px -77px 92px -21px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: inset 14px -77px 92px -21px rgba(0, 0, 0, 0.75);
+    box-shadow: inset 14px -77px 92px -21px rgba(0, 0, 0, 0.75); }
+  .main-events .main-info {
+    position: absolute;
+    top: 18%;
+    left: 5%;
+    text-align: left; }
+    .main-events .main-info h1 {
+      font-size: 32px;
+      line-height: 40px; }
+    .main-events .main-info h2 {
+      font-size: 22px;
+      line-height: 30px; }
+    .main-events .main-info p {
+      font-size: 18px;
+      line-height: 24px; }
+      .main-events .main-info p span:nth-last-of-type(n+2):after {
+        content: " | "; }
+    .main-events .main-info a {
+      text-decoration: underline;
+      font-style: italic;
+      font-size: 18px;
+      line-height: 28px; }
+
+.content .content-section {
+  height: 240px;
+  font-family: ccb-font;
+  padding: 20px 5%; }
+  .content .content-section h1 {
+    font-size: 24px;
+    line-height: 30px;
+    margin-bottom: 10px; }
+  .content .content-section .event-card {
+    background: url("/images/jogodedamas.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: 155% auto;
+    width: 80%;
+    height: 200px;
+    border-radius: 20px;
+    color: white;
+    padding: 120px 10px 10px 10px; }
+    .content .content-section .event-card .event-card-title {
+      font-size: 30px; }
+    .content .content-section .event-card p {
+      font-size: 18px;
+      line-height: 32px; }
+
+.original {
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  background: url("https://windows10spotlight.com/wp-content/uploads/2017/06/d3366e15478203a8c287d169cc5cb0ff.jpg") no-repeat;
+  background-size: 100% auto;
+  z-index: 1; }
+  .original .negative {
+    filter: invert(1);
+    width: 100%;
+    margin: 0;
+    -webkit-mask-image: url("/images/mask.png");
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: 100px;
+    mask-image: url("/images/mask.png");
+    mask-repeat: no-repeat;
+    mask-size: 100px; }
+
+.bottom {
+  text-align: center; }
+  .bottom .bottom-menu5 {
     background-color: #db1a21;
     position: absolute;
     bottom: 0;
@@ -200,7 +292,7 @@ section {
     height: 8%;
     margin: auto;
     line-height: 100%; }
-    .welcome-info .bottom-menu5 button {
+    .bottom .bottom-menu5 button {
       background-color: transparent;
       border: none;
       border-radius: 10px;
@@ -211,7 +303,10 @@ section {
       font-size: 26px;
       line-height: 100%;
       transform: translateY(-16%); }
-      .welcome-info .bottom-menu5 button:nth-of-type(3) {
+      .bottom .bottom-menu5 button:hover {
+        background-color: #CC1A21;
+        transform: scale(1.05) translateY(-16%); }
+      .bottom .bottom-menu5 button:nth-of-type(3) {
         background-color: #376787;
         border: #fff solid 5px;
         border-radius: 50%;
@@ -220,16 +315,36 @@ section {
         height: 80px;
         margin: 0 2%;
         font-size: 30px; }
-      .welcome-info .bottom-menu5 button:nth-of-type(-n + 2) {
+      .bottom .bottom-menu5 button:nth-of-type(-n + 2) {
         margin: 0 2%; }
-      .welcome-info .bottom-menu5 button:nth-of-type(n + 4) {
+      .bottom .bottom-menu5 button:nth-of-type(n + 4) {
         margin: 0 2%; }
-    .welcome-info .bottom-menu5 .active {
+    .bottom .bottom-menu5 .active {
       background-color: #fff;
       color: #db1a21;
       transform: scale(1.05) translateY(-16%); }
+      .bottom .bottom-menu5 .active:hover {
+        background-color: #fff; }
 
-.hidden {
-  display: none; }
+body {
+  cursor: none; }
+
+.pointer {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 3px solid black;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  transition: 0.05s;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  box-sizing: border-box;
+  z-index: 4; }
+
+.logo-simple:hover ~ .pointer {
+  width: 100px;
+  height: 100px;
+  background-color: blue; }
 
 /*# sourceMappingURL=main.css.map */
