--- a/scss/_landing_page.scss
+++ b/scss/_landing_page.scss
@@ -10,10 +10,10 @@
         filter:invert(1);
         width: 100%;
         margin: 0;
-        -webkit-mask-image: url('https://media0.giphy.com/media/xUPGcysZHzbcyoXWG4/giphy.gif'); //url('/images/mask.png');
+        -webkit-mask-image: url('/images/mask.png');
         -webkit-mask-repeat: no-repeat;
         -webkit-mask-size: 100px;
-        mask-image: url('https://media0.giphy.com/media/xUPGcysZHzbcyoXWG4/giphy.gif'); //url('/images/mask.png');
+        mask-image: url('/images/mask.png');
         mask-repeat: no-repeat;
         mask-size: 100px;
         pointer-events: none;
@@ -22,10 +22,10 @@
         position:absolute;
         top:200px;
         left:500px;
-        -webkit-mask-image: url('https://media0.giphy.com/media/xUPGcysZHzbcyoXWG4/giphy.gif'); //url('/images/mask.png');
+        -webkit-mask-image: url('/images/mask.png');
         -webkit-mask-repeat: no-repeat;
         -webkit-mask-size: 100px;
-        mask-image: url('https://media0.giphy.com/media/xUPGcysZHzbcyoXWG4/giphy.gif'); //url('/images/mask.png');
+        mask-image: url('/images/mask.png');
         mask-repeat: no-repeat;
         mask-size: 100px;
     }
@@ -102,9 +102,6 @@
         font-size:0;
         font-weight:700;
         vertical-align: top;
-        &:hover ~ .negative {
-            display:none;
-        }
         .time-measure {
             display:inline-block;
             text-align:center;
@@ -148,80 +145,91 @@
             transform:translate(-50%,-50%);
         }
     }
-}
 
-.main-title {
-    position:absolute;
-    top:46%;
-    left:5%;
-    font-family:'Roboto';
-    background-color:rgba(255,255,255,0.6);
-    padding:20px;
-    -webkit-box-shadow: 3px 8px 31px 2px rgba(0,0,0,0.53);
-    -moz-box-shadow: 3px 8px 31px 2px rgba(0,0,0,0.53);
-    box-shadow: 3px 8px 31px 2px rgba(0,0,0,0.53);
-
-    h1 {
-        font-size:100px;
-        text-transform:uppercase;
-    }
-    p {
-        font-size:30px;
-    }
-}
-
-.nav-title {
-    position:absolute;
-    top:5%;
-    left:5%;
-    font-size:20px;
-    font-family:'Roboto';
-    font-weight:600;
-}
-
-.social-media {
-    position:absolute;
-    top:5%;
-    right:5%;
-    font-size:34px;
-
-    a {
-        text-decoration: none;
-        color:black;
-
-        svg {
-            margin:0 6px;
-        }
-    }
-}
-
-.embassadors {
-    position:absolute;
-    left:5%;
-    bottom:10%;
-
-    div {
-        text-align:center;
-        display: inline-block;
-        margin:0 24px;
-
-
-        img {
-            width:150px;
-            border-radius:50%;
-            transform:translateY(30px);
+    .main-title {
+        position:absolute;
+        top:46%;
+        left:5%;
+        font-family:'Roboto';
+        background-color:rgba(255,255,255,0.6);
+        padding:20px;
+        -webkit-box-shadow: 3px 8px 31px 2px rgba(0,0,0,0.53);
+        -moz-box-shadow: 3px 8px 31px 2px rgba(0,0,0,0.53);
+        box-shadow: 3px 8px 31px 2px rgba(0,0,0,0.53);
+    
+        h1 {
+            font-size:100px;
+            text-transform:uppercase;
         }
         p {
-            color:white;
-            font-family: 'Roboto';
-            font-size:34px;
-            text-shadow:2px 2px rgba(0,0,0,0.5);
+            font-size:30px;
+        }
+    }
+    
+    .nav-title {
+        position:absolute;
+        top:5%;
+        left:5%;
+        font-size:20px;
+        font-family:'Roboto';
+        font-weight:600;
+    }
+    
+    .social-media {
+        position:absolute;
+        top:5%;
+        right:5%;
+        font-size:34px;
+        line-height:50px;
+    
+        a {
+            text-decoration: none;
+            color:black;
+            margin:0 5px;
+    
+            svg {
+                margin:0 6px;
 
-            &:first-of-type {
-                transform:translateX(-20px);
+                &:hover {
+                    transform:scale(1.1);
+                    transition:0.1s;
+                }
             }
-            &:last-of-type {
-                transform:translateX(20px);
+        }
+        &:hover ~ .negative {
+            opacity:0;
+            transition:0.1s;
+        }
+    }
+    
+    .embassadors {
+        position:absolute;
+        left:5%;
+        bottom:10%;
+    
+        div {
+            text-align:center;
+            display: inline-block;
+            margin:0 24px;
+    
+    
+            img {
+                width:150px;
+                border-radius:50%;
+                transform:translateY(30px);
+            }
+            p {
+                color:white;
+                font-family: 'Roboto';
+                font-size:34px;
+                text-shadow:2px 2px rgba(0,0,0,0.5);
+    
+                &:first-of-type {
+                    transform:translateX(-20px);
+                }
+                &:last-of-type {
+                    transform:translateX(20px);
+                }
             }
         }
     }
