Hidden key easter egg v1.0 implemented.

--- a/css/main.css
+++ b/css/main.css
@@ -279,17 +279,14 @@ main {
     mask-image: url("/images/mask.png");
     mask-repeat: no-repeat;
     mask-size: 100px;
-    pointer-events: none; }
+    pointer-events: none;
+    z-index: 0; }
   .page-container .easter-egg {
     position: absolute;
-    top: 200px;
-    left: 500px;
-    -webkit-mask-image: url("/images/mask.png");
-    -webkit-mask-repeat: no-repeat;
-    -webkit-mask-size: 100px;
-    mask-image: url("/images/mask.png");
-    mask-repeat: no-repeat;
-    mask-size: 100px; }
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: none; }
   .page-container .cta {
     background-color: #DB1A21;
     font-size: 0;
